# market-data-svc

./: .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 1a32a88f63e5_initial.py  b1262c34047b_first_migration.py  b1dfc5daec52_settlement_datetime_uniqueness.py
iex_app/api/crud/: basic_crud.py
iex_app/api/endpoints/: views.py
iex_app/api/models/: data.py  model_utils.py  models.py  pydantic_models.py
iex_app/common/: constants.py  enums.py  models.py  utils.py
iex_app/db/: core.py  manage.py  manual_data_migration.py
iex_app/scraping/: parsing_engines.py  price_data_bots.py  price_page_properties.py
k8s/: deployment.yaml  service.yaml
src/: config.py  main.py  manage.py
src/common/: config.py  constants.py  enums.py  logging_utils.py  models.py  utils.py
src/marketdata/: crud.py  models.py  router.py  router_utils.py  schema_utils.py  schemas.py
src/migrations/automated/: price_data_bot.py
src/migrations/automated/scraping/: parsing_engines.py  price_data_bot.py  price_page_properties.py
src/migrations/manual/: manual_data_migration.py
tests/: test_model_utils.py  test_parsing_engines.py  test_price_data_bots.py
tests/data/: dam_prices_page.html  rtm_prices_page.html
tests/integration_tests/: conftest.py  test_api.py  test_basic_crud.py  test_crud.py  test_manual_data_migration.py  test_market_data_router.py  test_router_utils.py
tests/integration_tests/json_data/: dam_prices.json
tests/unit_tests/: test_model_utils.py  test_parsing_engines.py  test_price_data_bots.py  test_schema_utils.py
utils/: price_bot_example_usage.py
