[tool.poetry]
name = "market-data-svc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
selenium = "^4.16.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.25"
openpyxl = "^3.1.2"
mypy = "^1.8.0"
types-pytz = "^2023.3.1.1"
alembic = "^1.13.1"
click = "^8.1.7"
sqlalchemy-utils = "^0.41.1"
uvicorn = "^0.27.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
flake8-import-order = "^0.18.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
